--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Registration</title>
+    
+    <link href="./style.css" style="text/css" rel="stylesheet" />
   </head>
   <body>
     <div id="app">
